--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <form onSubmit="return false">
-        num1 <input type="text" id="num1">
+        num1 <input type="text" id="num1" required>
         <br>
-        num2 <input type="text" id="num2">
+        num2 <input type="text" id="num2" required>
         <br>
 
-        <button type="submit" onClick = "doSum();">+</button>
+        <button type="submit" onClick="doSum();">+</button>
         <button type="submit" onclick="doMinus();">-</button>
         <button type="submit" onclick="doMultiply();">*</button>
         <button type="submit" onclick="dodivide();">/</button>
@@ -28,7 +28,7 @@
 
 
     <script>
-        function dosum() {
+        function doSum() {
             console.log("i am running");
 
             let num1 = document.querySelector("#num1").value;
@@ -43,7 +43,7 @@
             let result = num1 + num2;
 
             console.log("result: " , result);
-        document.querySelector("#result").innerHTML = result;        }
+        document.querySelector("#result").innerHTML = "" + result;        }
 
         function doMinus() {
             console.log("i am running");
