--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             let result = num1 + num2;
 
             console.log("result: " , result);
-        document.querySelector("#result").innerHTML = "result" + result;        }
+            document.querySelector("#result").innerHTML = "Result_" + result;        }
 
         function doMinus() {
             console.log("i am running");
@@ -60,7 +60,7 @@
             let result = num1 - num2;
 
             console.log("result: " , result);
-        document.querySelector("#result").innerHTML = "result" + result;        }
+            document.querySelector("#result").innerHTML = "Result_" + result;        }
 
         function doMultiply() {
             console.log("i am running");
@@ -77,7 +77,7 @@
             let result = num1 * num2;
 
             console.log("result: " , result);
-        document.querySelector("#result").innerHTML = "result" + result;        }
+            document.querySelector("#result").innerHTML = "Result_" + result;        }
 
         function dodivide() {
             console.log("i am running");
@@ -94,7 +94,7 @@
             let result = num1 / num2;
 
             console.log("result: " , result);
-        document.querySelector("#result").innerHTML = "result" + result;        }
+            document.querySelector("#result").innerHTML = "Result_" + result;        }
 
         function doModulus() {
             console.log("i am running");
@@ -111,7 +111,7 @@
             let result = num1 % num2;
 
             console.log("result: " , result);
-        document.querySelector("#result").innerHTML = "result" + result;        }
+        document.querySelector("#result").innerHTML = "Result_" + result;        }
     </script>
 </body>
 </html>
